<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CogSci Crowd App</string>
    <string name="action_settings">Settings</string>
    <string name="appDescription">A research app for crowd behaviours developed by CogSci at Queen Mary, University of London.</string>
    <string name="crowdNodeServiceToggleButtonTextOn">Crowd Node</string>
    <string name="crowdNodeServiceToggleButtonTextOff">Crowd Node</string>
    <string name="crowdNodeServiceNotificationServerConnectedText">Server Active. </string>
    <string name="crowdNodeServiceNotificationText">Sensing Active. </string>
    <string name="uploadLogsStartButtonText">Upload</string>
    <string name="uploadLogsInfoText">Logs not searched</string>

</resources>