<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/appDescription" />

    <ToggleButton
        android:id="@+id/crowdNodeServiceToggleButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:textOn="@string/crowdNodeServiceToggleButtonTextOn"
        android:textOff="@string/crowdNodeServiceToggleButtonTextOff"
        android:onClick="onCrowdNodeServiceToggleClicked" />

    <Button
        android:id="@+id/uploadLogsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/crowdNodeServiceToggleButton"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:text="@string/uploadLogsStartButtonText" 
        android:onClick="onUploadLogsButtonClicked" />/>

    <ProgressBar
        android:id="@+id/uploadLogsProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/crowdNodeServiceToggleButton"
        android:layout_alignTop="@+id/uploadLogsButton"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/uploadLogsInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/uploadLogsButton"
        android:layout_alignBottom="@+id/uploadLogsButton"
        android:layout_toLeftOf="@+id/uploadLogsProgressBar"
        android:layout_toRightOf="@+id/uploadLogsButton"
        android:text="@string/uploadLogsInfoText" />

</RelativeLayout>